# lemongame

./: Lemon.xcf  README.md  client.py  pyproject.toml  server.py  testClient.py
src/: client.py  server.py
testsrc/: client.py  gameUtils.py  network.py  server.py
